<?xml version="1.0"?>
<package format="2">
  <name>docking</name>
  <version>0.0.0</version>
  <description>Docking for the Antrobot200</description>
<maintainer email="sergio.lopez@upf.edu">spanish</maintainer>


 <license>TODO</license>
      <buildtool_depend>catkin</buildtool_depend>
      <build_depend>roscpp</build_depend>
      <exec_depend>roscpp</exec_depend>
      <build_depend>geometry_msgs</build_depend>
      <exec_depend>geometry_msgs</exec_depend>

<export>
  </export>
</package>
